style update - flex gap fix

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ section {
     padding: 2rem 2.75rem;   
     display: flex;
     flex-direction: column;
-    gap: 1.5rem; 
+    gap: 2.25rem; 
 }
 
 section > img {
